capstone-ui/src/components/About/About.css
.about {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
}
.us {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  width: fit-content;
  height: 70vh;
  font-size: 1.5rem;
}
.us-photo {
  width: 38vw;
  border-radius: 1.5%;
}
.about-bio {
  width: 30%;
  margin-left: 4vh;
}
.headshot {
  max-width: 100%;
  outline: rgb(181, 181, 181) solid 2px;
  border-radius: 4%;
  position: relative;
  transition: filter 0.3s;
}

.headshot:hover {
  opacity: 0.4; /* Adjust the opacity as needed */
  /* background-color: black; */
  filter: brightness(
    35%
  ); /* Adjust the brightness value to control how dark the image becomes */
}

.headshot::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(
    0,
    0,
    0,
    0.5
  ); /* Adjust the opacity and color as needed */
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 0;
  transition: opacity 0.1s;
  pointer-events: none; /* This prevents the pseudo-element from blocking hover interactions with the image */
}

.headshot:hover::before {
  opacity: 1;
  background-color: black;
}

.jordan-image-container {
  position: relative;
  display: inline-block;
  overflow: hidden;
  padding: 1%;
  display: flex;
  justify-content: center;
  width: 80%;
  /* margin-top:2vh; */
  /* margin-bottom:2vh; */
}

.image-container {
  position: relative;
  display: inline-block;
  overflow: hidden;
  padding: 1%;
  display: flex;
  justify-content: center;
  width: 70%;
}
.jordan-image-container:hover .overlay-text {
  opacity: 1; 
}
.image-container:hover .overlay-text {
  opacity: 1; 
}

.overlay-text {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -55%);
  color: white;
  text-align: center;
  opacity: 0;
  transition: opacity 0.3s;
  display: flex;
  font-size: 1rem;
  pointer-events: none;
  align-items: center; /* Center vertically */
  justify-content: center; /* Center horizontally */
  margin-bottom:2vh;
}
.all_creators {
  display: flex;
  flex-direction: row;
  gap: 1.5vw;
}

.our_mission {
  margin-top: 0;
}
.creators-header-flex{
  display:flex;
  align-items:center;
  justify-content: center;
}

.creator-bio {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin-top: 0.5vh;
  padding: 1vh;
  padding-top: 2vh;
  max-width: 30vw;
  height: 70vh;
}

.bio_name {
  font-size: 2rem;
  margin: 0;
  margin-bottom: 1.5vh;
}

.contact {
  display: flex;
  flex-direction: row;
  margin-top: 2vh;
}

.subsection,
.uni,
.major {
  margin-top: 0;
  margin-bottom: 0.5vh;
  display: flex;
}

.major {
  font-size: 1rem;
}

.about-summary {
  width: 60vw;
  margin-top: 3vh;
  padding: 3vh;
  margin-bottom: 10vh;
  font-size: 1.25rem;
}

.mailto {
  margin-left: 4vh;
}

.meet_creators,
.team-header {
  font-weight: normal;
}

.about_spliter {
  background-color: white;
  padding: 1.5vh;
  border-radius: 0.5rem;
  display: flex;
  align-items: center;
  justify-content: center;
  width:90%;
  max-width: 100%;
}

.creators-header {
  margin: 0;
  padding-top: 5vh;
  font-size: 5rem;
  font-weight: 300;
  padding-bottom: 2vh;
}

.us_leftside {
  margin-left: 3vw;
}

.linkedinLogo,
.emailLogo {
  width: 3vh;
}


.umdLogo {
  width: 10vw;
}

.brownLogo {
  width: 12vw;
}

.andrewsLogo {
  width: 4vw;
}

.us-photo:hover{
  transition: transform 0.5s ease;
  transform: scale(1.1);
}

